@@ -103,8 +103,6 @@ adVarNumeric                  = 0x8B
 adVarWChar                    = 0xCA
 adVariant                     = 0xC
 adWChar                       = 0x82
-# Additional constants used by introspection but not ADO itself
-AUTO_FIELD_MARKER = -1000
 
 adTypeNames = {
     adBSTR: 'adBSTR',
